testing yarn heroku

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ lerna-debug.log*
 
 .env.development
 .env.test
+
+.yarn/*
+!.yarn/cache
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
