--- a/package.json
+++ b/package.json
@@ -77,5 +77,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "workspaces": [
+    "client"
+  ]
 }
